Add RESP protocol support and redis-cli compatibility
Implement the Redis Serialization Protocol (RESP) wire format so that
redis-cli and any standard Redis client library work with QuickSilver
without modification. Plain-text inline commands (telnet/nc) continue
to work as a fallback.

Key changes:
- resp/: sealed RespValue interface with five record subtypes
  (SimpleString, RespError, RespInteger, BulkString, RespArray);
  stateful RespParser with inline fallback; stateless RespEncoder
  with single-flush guarantee for nested arrays
- security/: ConnectionLimits constants — 64 KB inline, 512 MB bulk,
  1 M array elements, 5-min socket timeout, 512 KB max key
- Command<K,V> return type changed from String to RespValue; all
  implementations updated to return typed values
- CommandRegistry accepts OutputStream instead of Socket so
  Subscribe/Unsubscribe can register the client stream with PubSubManager
- ClientHandler rewritten: BufferedInputStream/OutputStream, SO_TIMEOUT,
  key-size guard, cluster forwarding via ClusterClient.sendCommandWithResponse
- ClusterClient rewritten: three named methods (sendCommand,
  sendDumpCommand, sendCommandWithResponse) all using RESP framing
- PubSubManager: PrintWriter → OutputStream; publish() returns int
  (delivery count); dead subscribers auto-removed on IOException
- Tests updated: CommandRegistryTest and ServerIntegrationTest assert
  on RespValue types; pub/sub round-trip verified via ByteArrayOutputStream
- README updated to reflect RESP support, new packages, redis-cli usage,
  security limits table, and design patterns in use