@@ -2,34 +2,34 @@ package io.github.udayhe.quicksilver.command.implementation;
 
 import io.github.udayhe.quicksilver.command.Command;
 import io.github.udayhe.quicksilver.pubsub.PubSubManager;
+import io.github.udayhe.quicksilver.resp.value.*;
 
-import java.io.PrintWriter;
+import java.io.OutputStream;
+import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-public class Subscribe implements Command<String, PrintWriter> {
+public class Subscribe implements Command<String, String> {
 
-    private static final Logger LOG = Logger.getLogger(Subscribe.class.getName());
-    private static final String ERROR_USAGE_MESSAGE = "ERROR: Usage - SUBSCRIBE <topic>";
-    private static final String SUCCESS_MESSAGE_TEMPLATE = "✅ Subscribed to topic: {0}";
-    private static final String LOG_MESSAGE_TEMPLATE = "📡 Client subscribed to topic: {0}";
+    private static final Logger log = Logger.getLogger(Subscribe.class.getName());
+
     private final PubSubManager pubSubManager;
+    private final OutputStream clientOut;
 
-    public Subscribe(PubSubManager pubSubManager) {
+    public Subscribe(PubSubManager pubSubManager, OutputStream clientOut) {
         this.pubSubManager = pubSubManager;
+        this.clientOut = clientOut;
     }
 
     @Override
-    public String execute(String topic, PrintWriter subscriberWriter) {
-        if (isInvalidTopic(topic)) {
-            return ERROR_USAGE_MESSAGE;
-        }
-        pubSubManager.subscribe(topic, subscriberWriter);
-        LOG.log(Level.INFO, LOG_MESSAGE_TEMPLATE, topic);
-        return SUCCESS_MESSAGE_TEMPLATE.replace("{0}", topic);
-    }
-
-    private boolean isInvalidTopic(String topic) {
-        return topic == null || topic.trim().isEmpty();
+    public RespValue execute(String topic, String ignored) {
+        if (topic == null || topic.isBlank()) return RespError.wrongArgs("subscribe");
+        pubSubManager.subscribe(topic, clientOut);
+        log.log(Level.INFO, "Client subscribed to topic: {0}", topic);
+        return new RespArray(List.of(
+                BulkString.of("subscribe"),
+                BulkString.of(topic),
+                new RespInteger(1)
+        ));
     }
 }
